# telegate

./: .dockerignore  .gitignore  Dockerfile  api.py  config.py  config_reader.py  gram.py  identity_manager.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-image.yml
env/: Dockerfile  build.sh  compose.yml  deploy_telegate.yml  docker-compose.yml
src/: config.py  gram.py  main.py
tests/: msg1.json  test_identity_manager.py  test_msg1.sh
